--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
       </div>
     </header>
     <!-- Header End-->
+    
     <!-- Navbar Start -->
-    <header></header>
     <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container">
         <a class="navbar-brand" href="#"
@@ -61,7 +61,7 @@
               <a class="nav-link" href="menu.html">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Kontak</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
           <i class="bi bi-search" style="color: white; margin-left: 40px"></i>
@@ -86,87 +86,57 @@
 
     <!-- About Start -->
     <section class="about">
-      <div class="container">
+      <div class="container mt-3">
         <!-- breadcrumb start -->
-        <nav aria-label="breadcrumb">
+        <nav aria-label="breadcrumb ">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">About</li>
           </ol>
         </nav>
         <!-- breadcrumb end -->
 
-        <h1 class="mt-4 text-center" style="margin-bottom: 100px">About Me</h1>
-        <div class="row mt-5">
+        <div class="row" style="padding-top: 100px">
+          <div class="col-sm-6">
+            <h3>Sejarah</h3>
+            <p class="text-justify">
+              Dapur Lezat didirikan pada tahun 1975 oleh pasangan suami istri,
+              Jean-Pierre dan Isabelle Martin, di kota kecil di Provence,
+              Prancis. Mereka berdua adalah pecinta kuliner yang berbakat dan
+              telah belajar seni memasak sejak muda. Jean-Pierre adalah seorang
+              koki berpengalaman, sedangkan Isabelle adalah seorang sommelier
+              yang ahli dalam memilih anggur terbaik untuk mendampingi hidangan.
+            </p>
+          </div>
           <div class="col-sm-6">
             <img
               src="asset/img/bg-about.jpg"
               alt="bg-about"
-              style="width: 400px; height: 400px"
+              style="width: 550px; height: 350px"
             />
           </div>
-          <div class="col-sm-6">
-            <h3>Kenapa Memilih Restorant Kami?</h3>
-            <p class="text-justify">
-              Kami adalah restoran yang menghadirkan pengalaman kuliner tak
-              terlupakan. Dari bahan-bahan berkualitas tinggi hingga
-              tangan-tangan kreatif kami, setiap hidangan di sini adalah hasil
-              perpaduan sempurna.
-            </p>
-            <p class="text-justify">
-              Mengapa memilih Dapur Lezat? Karena kami mengutamakan kualitas dan
-              kepuasan pelanggan. Setiap hidangan kami adalah karya seni yang
-              diciptakan untuk memanjakan selera Anda.
-            </p>
-          </div>
         </div>
-        <div class="row mt-5">
-          <div class="col-sm-4">
-            <div class="card text-center" style="border: none">
-              <div class="circle">
-                <img
-                  src="asset/img/premium-quality.png"
-                  alt="premium-quality"
-                  style="height: 50px; width: 50px"
-                />
+        <div class="row" style="margin-top: 200px">
+          <div class="col-sm-6">
+            <div class="card manager">
+              <div class="card-body">
+                <h5 class="card-title">Restuarant Manager</h5>
+                <p class="card-text">Muhammad Mufty Arifin</p>
               </div>
-              <h4 class="mt-4">Premium Quality</h4>
-              <p>
-                Kami hanya menggunakan bahan-bahan premium quality untuk
-                menciptakan rasa yang tak tertandingi dalam setiap hidangan.
-              </p>
+              <img
+                src="asset/img/manager.png"
+                class="card-img-top"
+                alt="manager"
+              />
             </div>
           </div>
-          <div class="col-sm-4">
-            <div class="card text-center" style="border: none">
-              <div class="circle">
-                <img
-                  src="asset/img/vegetable.png"
-                  alt="vegetables"
-                  style="height: 50px; width: 50px"
-                />
+          <div class="col-sm-6">
+            <div class="card chef">
+              <div class="card-body">
+                <h5 class="card-title">Executive Chef</h5>
+                <p class="card-text">Arnold Poernomo</p>
               </div>
-              <h4 class="mt-4">Seasonal Vegetables</h4>
-              <p>
-                Kami bekerja sama dengan petani lokal untuk memastikan bahwa
-                bahan sayuran musiman kami selalu segar dan berkualitas.
-              </p>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="card text-center" style="border: none">
-              <div class="circle">
-                <img
-                  src="asset/img/fruits.png"
-                  alt="fruits"
-                  style="height: 50px; width: 50px"
-                />
-              </div>
-              <h4 class="mt-4">Fresh Fruit</h4>
-              <p>
-                Kami menjaga kualitas buah segar kami untuk memberikan
-                pengalaman yang menyegarkan di setiap hidangan.
-              </p>
+              <img src="asset/img/chef.png" class="card-img-top" alt="chef" />
             </div>
           </div>
         </div>
