--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <a class="nav-link" href="menu.html">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Kontak</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
           <i class="bi bi-search" style="color: white; margin-left: 40px"></i>
@@ -175,9 +175,9 @@
     <!-- Menu Start -->
     <section class="menu">
       <div class="container">
-        <h1>Our Menu</h1>
+        <h1 style="text-align: center">Our Menu</h1>
         <div class="row">
-          <div class="starters"><h2>Satarters</h2></div>
+          <h2>Satarters</h2>
 
           <div class="col-sm-6">
             <img src="asset/img/starters.png" alt="" />
@@ -206,7 +206,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="starters"><h2>Deserts</h2></div>
+          <h2>Deserts</h2>
           <div class="col-sm-6">
             <table class="table">
               <tbody>
@@ -229,12 +229,12 @@
               </tbody>
             </table>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-6" style="text-align: right">
             <img src="asset/img/desert.png" alt="" />
           </div>
         </div>
         <div class="row">
-          <div class="starters"><h2>Drinks</h2></div>
+          <h2>Drinks</h2>
 
           <div class="col-sm-6">
             <img src="asset/img/drinks.png" alt="" />
