--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
       </div>
     </header>
     <!-- Header End-->
-    
+
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg sticky-top">
+    <nav class="navbar navbar-dark navbar-expand-lg sticky-top">
       <div class="container">
         <a class="navbar-brand" href="#"
           >Dapur<span class="fw-bold">Lezat</span></a
@@ -63,8 +63,10 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
+            <li class="nav-item">
+              <i class="bi bi-search nav-link" style="color: white"></i>
+            </li>
           </ul>
-          <i class="bi bi-search" style="color: white; margin-left: 40px"></i>
         </div>
       </div>
     </nav>
@@ -86,7 +88,7 @@
 
     <!-- About Start -->
     <section class="about">
-      <div class="container mt-3">
+      <div class="container">
         <!-- breadcrumb start -->
         <nav aria-label="breadcrumb ">
           <ol class="breadcrumb">
@@ -95,8 +97,7 @@
           </ol>
         </nav>
         <!-- breadcrumb end -->
-
-        <div class="row" style="padding-top: 100px">
+        <div class="row" style="margin-top: 50px">
           <div class="col-sm-6">
             <h3>Sejarah</h3>
             <p class="text-justify">
@@ -112,14 +113,14 @@
             <img
               src="asset/img/bg-about.jpg"
               alt="bg-about"
-              style="width: 550px; height: 350px"
+              style="width: 100%; height: 400px"
             />
           </div>
         </div>
-        <div class="row" style="margin-top: 200px">
+        <div class="row">
           <div class="col-sm-6">
             <div class="card manager">
-              <div class="card-body">
+              <div class="card-body text-center">
                 <h5 class="card-title">Restuarant Manager</h5>
                 <p class="card-text">Muhammad Mufty Arifin</p>
               </div>
@@ -130,9 +131,9 @@
               />
             </div>
           </div>
-          <div class="col-sm-6">
-            <div class="card chef">
-              <div class="card-body">
+          <div class="col-sm-6 chef">
+            <div class="card">
+              <div class="card-body text-center">
                 <h5 class="card-title">Executive Chef</h5>
                 <p class="card-text">Arnold Poernomo</p>
               </div>
@@ -156,8 +157,14 @@
           </div>
           <div class="col-sm-4">
             <h2>Contact</h2>
-            <p>+1+86 852 346 000</p>
-            <p>info@dapurlezat.com</p>
+            <p>
+              +1+86 852 346 000 <br />
+              info@dapurlezat.com
+            </p>
+            <p>
+              1959 Sepulveda Blvd. <br />
+              Culver City, CA, 90230
+            </p>
           </div>
           <div class="col-sm-4 subs">
             <h2>Never Miss a Recipe</h2>
