--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,8 +34,7 @@
     <!-- Header End-->
 
     <!-- Navbar Start -->
-
-    <nav class="navbar navbar-expand-lg sticky-top z-10">
+    <nav class="navbar navbar-dark navbar-expand-lg sticky-top">
       <div class="container">
         <a class="navbar-brand" href="#"
           >Dapur<span class="fw-bold">Lezat</span></a
@@ -64,8 +64,10 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
+            <li class="nav-item">
+              <i class="bi bi-search nav-link" style="color: white"></i>
+            </li>
           </ul>
-          <i class="bi bi-search" style="color: white; margin-left: 40px"></i>
         </div>
       </div>
     </nav>
@@ -75,12 +77,24 @@
     <section class="jumbotron justify-content-between">
       <div class="container">
         <div class="row">
-          <div class="col-sm-6 justify-content-lg-start">
+          <div class="col-md-6 order-2 order-md-1">
             <h1>Healthy Eating is important part of lifestyle</h1>
-            <button type="button" class="btn btn-light mt-5">Book Now</button>
+            <button
+              type="button"
+              class="btn btn-light mt-5"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModal"
+            >
+              Book Now
+            </button>
           </div>
-          <div class="col-sm-6 jumbotron-img">
-            <img src="asset/img/herro-bg.jpg" class="img-fluid" alt="gambar" />
+          <div class="col-md-6 jumbotron-img order-1 order-md-2">
+            <img
+              src="asset/img/herro-bg.jpg"
+              class="img-fluid"
+              alt="gambar"
+              style="border-radius: 10px"
+            />
           </div>
         </div>
       </div>
@@ -91,27 +105,37 @@
     <section class="about">
       <div class="container">
         <div class="row text-center mt-5">
-          <div class="col">
+          <div>
             <h1>About Me</h1>
           </div>
         </div>
         <div class="row mt-5">
-          <div class="col-sm-6">
+          <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
             <img
               src="asset/img/bg-about.jpg"
               alt="bg-about"
-              style="width: 400px; height: 400px"
+              style="width: 100%; max-height: 400px"
             />
           </div>
-          <div class="col-sm-6">
-            <h3>Kenapa Memilih Restorant Kami?</h3>
-            <p class="text-justify">
+          <div class="col-md-6">
+            <h3 data-aos="fade-left" data-aos-duration="1000">
+              Kenapa Memilih Restorant Kami?
+            </h3>
+            <p
+              class="text-justify"
+              data-aos="fade-left"
+              data-aos-duration="2000"
+            >
               Kami adalah restoran yang menghadirkan pengalaman kuliner tak
               terlupakan. Dari bahan-bahan berkualitas tinggi hingga
               tangan-tangan kreatif kami, setiap hidangan di sini adalah hasil
               perpaduan sempurna.
             </p>
-            <p class="text-justify">
+            <p
+              class="text-justify"
+              data-aos="fade-left"
+              data-aos-duration="3000"
+            >
               Mengapa memilih Dapur Lezat? Karena kami mengutamakan kualitas dan
               kepuasan pelanggan. Setiap hidangan kami adalah karya seni yang
               diciptakan untuk memanjakan selera Anda.
@@ -121,15 +145,17 @@
         <div class="row mt-5">
           <div class="col-sm-4">
             <div class="card text-center" style="border: none">
-              <div class="circle">
+              <div class="circle" data-aos="fade-up" data-aos-duration="1000">
                 <img
                   src="asset/img/premium-quality.png"
                   alt="premium-quality"
                   style="height: 50px; width: 50px"
                 />
               </div>
-              <h4 class="mt-4">Premium Quality</h4>
-              <p>
+              <h4 class="mt-4" data-aos="fade-up" data-aos-duration="2000">
+                Premium Quality
+              </h4>
+              <p data-aos="fade-up" data-aos-duration="3000">
                 Kami hanya menggunakan bahan-bahan premium quality untuk
                 menciptakan rasa yang tak tertandingi dalam setiap hidangan.
               </p>
@@ -137,15 +163,17 @@
           </div>
           <div class="col-sm-4">
             <div class="card text-center" style="border: none">
-              <div class="circle">
+              <div class="circle" data-aos="fade-up" data-aos-duration="1000">
                 <img
                   src="asset/img/vegetable.png"
                   alt="vegetables"
                   style="height: 50px; width: 50px"
                 />
               </div>
-              <h4 class="mt-4">Seasonal Vegetables</h4>
-              <p>
+              <h4 class="mt-4" data-aos="fade-up" data-aos-duration="2000">
+                Seasonal Vegetables
+              </h4>
+              <p data-aos="fade-up" data-aos-duration="3000">
                 Kami bekerja sama dengan petani lokal untuk memastikan bahwa
                 bahan sayuran musiman kami selalu segar dan berkualitas.
               </p>
@@ -153,15 +181,22 @@
           </div>
           <div class="col-sm-4">
             <div class="card text-center" style="border: none">
-              <div class="circle">
+              <div
+                class="circle"
+                data-aos="fade-up"
+                data-aos-duration="1000"
+                delay="5"
+              >
                 <img
                   src="asset/img/fruits.png"
                   alt="fruits"
                   style="height: 50px; width: 50px"
                 />
               </div>
-              <h4 class="mt-4">Fresh Fruit</h4>
-              <p>
+              <h4 class="mt-4" data-aos="fade-up" data-aos-duration="2000">
+                Fresh Fruit
+              </h4>
+              <p data-aos="fade-up" data-aos-duration="3000">
                 Kami menjaga kualitas buah segar kami untuk memberikan
                 pengalaman yang menyegarkan di setiap hidangan.
               </p>
@@ -177,8 +212,7 @@
       <div class="container">
         <h1 style="text-align: center">Our Menu</h1>
         <div class="row">
-          <h2>Satarters</h2>
-
+          <h2>Starters</h2>
           <div class="col-sm-6">
             <img src="asset/img/starters.png" alt="" />
           </div>
@@ -203,42 +237,13 @@
                 </tr>
               </tbody>
             </table>
+            <a href="menu.html"
+              ><button class="btn btn-menu">Selengkapnya</button></a
+            >
           </div>
         </div>
         <div class="row">
-          <h2>Deserts</h2>
-          <div class="col-sm-6">
-            <table class="table">
-              <tbody>
-                <tr>
-                  <td>Desert Strawberry</td>
-                  <td>Rp. 27.000</td>
-                </tr>
-                <tr>
-                  <td>Belgium Milk Choco</td>
-                  <td>Rp. 55.000</td>
-                </tr>
-                <tr>
-                  <td>Aspic Jelly</td>
-                  <td>Rp. 25.000</td>
-                </tr>
-                <tr>
-                  <td>Salad Buah</td>
-                  <td>Rp. 25.000</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <div class="col-sm-6" style="text-align: right">
-            <img src="asset/img/desert.png" alt="" />
-          </div>
-        </div>
-        <div class="row">
-          <h2>Drinks</h2>
-
-          <div class="col-sm-6">
-            <img src="asset/img/drinks.png" alt="" />
-          </div>
+          <h2>Main Course</h2>
           <div class="col-sm-6">
             <table class="table">
               <tbody>
@@ -260,10 +265,78 @@
                 </tr>
               </tbody>
             </table>
+            <a href="menu.html"
+              ><button class="btn btn-menu">Selengkapnya</button></a
+            >
+          </div>
+          <div class="col-sm-6">
+            <img src="asset/img/maincourse.jpg" alt="" />
+          </div>
+        </div>
+        <div class="row">
+          <h2>Deserts</h2>
+          <div class="col-sm-6" style="text-align: right">
+            <img src="asset/img/desert.png" alt="" />
+          </div>
+          <div class="col-sm-6">
+            <table class="table">
+              <tbody>
+                <tr>
+                  <td>Desert Strawberry</td>
+                  <td>Rp. 27.000</td>
+                </tr>
+                <tr>
+                  <td>Belgium Milk Choco</td>
+                  <td>Rp. 55.000</td>
+                </tr>
+                <tr>
+                  <td>Aspic Jelly</td>
+                  <td>Rp. 25.000</td>
+                </tr>
+                <tr>
+                  <td>Salad Buah</td>
+                  <td>Rp. 25.000</td>
+                </tr>
+              </tbody>
+            </table>
+            <a href="menu.html"
+              ><button class="btn btn-menu">Selengkapnya</button></a
+            >
+          </div>
+        </div>
+        <div class="row">
+          <h2>Drinks</h2>
+          <div class="col-sm-6">
+            <table class="table">
+              <tbody>
+                <tr>
+                  <td>Salad Buah</td>
+                  <td>Rp. 25.000</td>
+                </tr>
+                <tr>
+                  <td>Pumpkin Soup</td>
+                  <td>Rp. 25.000</td>
+                </tr>
+                <tr>
+                  <td>Aspic Jelly</td>
+                  <td>Rp. 25.000</td>
+                </tr>
+                <tr>
+                  <td>Salad Buah</td>
+                  <td>Rp. 25.000</td>
+                </tr>
+              </tbody>
+            </table>
+            <a href="menu.html"
+              ><button class="btn btn-menu">Selengkapnya</button></a
+            >
+          </div>
+          <div class="col-sm-6">
+            <img src="asset/img/drinks.png" alt="" />
           </div>
         </div>
         <div class="delivery">
-          <button type="button" class="btn btn-delivery">
+          <button type="button" class="btn btn-menu">
             <i class="bi bi-whatsapp" style="margin-right: 5px"></i>Delivery
           </button>
         </div>
@@ -275,7 +348,11 @@
     <section class="branch">
       <div class="container">
         <h1>Cabang Kami</h1>
-        <div id="carouselExampleCaptions" class="carousel slide">
+        <div
+          id="carouselExampleCaptions"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
           <div class="carousel-indicators">
             <button
               type="button"
@@ -300,14 +377,22 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="asset/img/bg-about.jpg" class="d-block" alt="jakarta" />
+              <img
+                src="asset/img/bg-about.jpg"
+                class="d-block w-100"
+                alt="jakarta"
+              />
               <div class="carousel-caption">
                 <h5>JAKARTA</h5>
                 <p>Jl. lorem ipsum, No.1, Jakarta</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="asset/img/bandung.jpg" class="d-block" alt="bandung" />
+              <img
+                src="asset/img/bandung.jpg"
+                class="d-block w-100"
+                alt="bandung"
+              />
               <div class="carousel-caption">
                 <h5>BANDUNG</h5>
                 <p>Jl. lorem ipsum, No.1, Bandung</p>
@@ -316,7 +401,7 @@
             <div class="carousel-item">
               <img
                 src="asset/img/surabaya.jpg"
-                class="d-block"
+                class="d-block w-100"
                 alt="surabaya"
               />
               <div class="carousel-caption">
@@ -346,8 +431,101 @@
         </div>
       </div>
     </section>
-
     <!-- Branch End -->
+
+    <!-- Modal Start -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="card-reservation d-flex flex-column">
+            <p class="card-reservation-tittle">Make a Reservation</p>
+            <form action="">
+              <div class="col-12 mb-3">
+                <input
+                  type="text"
+                  class="form-control form-control-lg card-reservation-input"
+                  id="exampleInput"
+                  aria-describedby="firstname"
+                  placeholder="First Name"
+                  required
+                />
+              </div>
+              <div class="col-12 mb-3">
+                <input
+                  type="text"
+                  class="form-control form-control-lg card-reservation-input"
+                  id="exampleInput"
+                  aria-describedby="lastname"
+                  placeholder="Last Name"
+                  required
+                />
+              </div>
+              <div class="col-12 mb-3">
+                <input
+                  type="email"
+                  class="form-control form-control-lg card-reservation-input"
+                  id="exampleInput"
+                  aria-describedby="emailHelp"
+                  placeholder="hi@commerce.com"
+                  required
+                />
+              </div>
+              <div class="col-12 mb-3">
+                <input
+                  type="tel"
+                  class="form-control form-control-lg card-reservation-input"
+                  id="exampleInput"
+                  aria-describedby="phone"
+                  placeholder="phone"
+                  required
+                />
+              </div>
+              <div class="col-12 mb-3">
+                <input
+                  type="date"
+                  class="form-control form-control-lg card-reservation-input"
+                  id="date"
+                  aria-describedby="date"
+                  required
+                />
+              </div>
+              <div class="col-md-12 mb-3">
+                <select
+                  id="inputState"
+                  class="form-select card-reservation-input"
+                  required
+                >
+                  <option selected value="">O'clock</option>
+                  <option>11:00 am</option>
+                  <option>13:00 pm</option>
+                  <option>18:00 pm</option>
+                </select>
+              </div>
+              <div class="col-md-12">
+                <input
+                  type="number"
+                  class="form-control form-control-lg card-reservation-input"
+                  id="person"
+                  placeholder="Person"
+                  required
+                />
+              </div>
+            </form>
+            <div id="liveAlertPlaceholder"></div>
+            <button type="button" class="btn btn-reservation" id="liveAlertBtn">
+              Submit
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal End -->
 
     <!-- Footer Start -->
     <footer class="footer">
@@ -355,14 +533,20 @@
         <div class="row">
           <div
             class="col-sm-4"
-            style="text-align: left; margin-top: 50px; padding: 5px"
+            style="text-align: left; margin-top: auto; margin-bottom: auto"
           >
             <h2>DapurLezat</h2>
           </div>
           <div class="col-sm-4">
             <h2>Contact</h2>
-            <p>+1+86 852 346 000</p>
-            <p>info@dapurlezat.com</p>
+            <p>
+              +1+86 852 346 000 <br />
+              info@dapurlezat.com
+            </p>
+            <p>
+              1959 Sepulveda Blvd. <br />
+              Culver City, CA, 90230
+            </p>
           </div>
           <div class="col-sm-4 subs">
             <h2>Never Miss a Recipe</h2>
@@ -395,6 +579,19 @@
       </div>
     </footer>
     <!-- Footer End -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script>
+      gsap.from(".jumbotron img", { opacity: 0, x: 100, duration: 3 });
+      gsap.from(".jumbotron h1", { opacity: 0, y: -100, duration: 3 });
+      gsap.from(".jumbotron button", { opacity: 0, y: 100, duration: 3 });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        once: true,
+      });
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
